edited http requests and database relations in case of deletion
