# docs/swagger.json
@@ -49,7 +49,7 @@
             }
         },
         "/login": {
-            "get": {
+            "post": {
                 "description": "Login user and return access and refresh tokens.",
                 "consumes": [
                     "application/json"
@@ -177,7 +177,7 @@
             }
         },
         "/refresh": {
-            "get": {
+            "post": {
                 "description": "Recieves refresh token as a json named \"token\" and return access and refresh tokens.",
                 "consumes": [
                     "application/json"
@@ -259,9 +259,42 @@
                 }
             }
         },
+        "/team/{team_id}": {
+            "delete": {
+                "description": "Delete a team by its id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Dealete a team",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Team id",
+                        "name": "team_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.Model"
+                        }
+                    },
+                    "406": {
+                        "description": "Not Acceptable",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/teamUser": {
-            "get": {
-                "description": "Get all users in the taeam",
+            "post": {
+                "description": "Add new user to the team.",
                 "consumes": [
                     "application/json"
                 ],
@@ -271,10 +304,10 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Get team members",
+                "summary": "Add user",
                 "parameters": [
                     {
-                        "description": "Enter team id",
+                        "description": "Enter user id, team id and role id",
                         "name": "model",
                         "in": "body",
                         "required": true,
@@ -302,28 +335,25 @@
                         "schema": {}
                     }
                 }
-            },
-            "post": {
-                "description": "Add new user to the team.",
-                "consumes": [
-                    "application/json"
-                ],
+            }
+        },
+        "/teamUser/{team_id}": {
+            "get": {
+                "description": "Get all users in the taeam",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "user"
                 ],
-                "summary": "Add user",
+                "summary": "Get team members",
                 "parameters": [
                     {
-                        "description": "Enter user id, team id and role id",
-                        "name": "model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/database.Model"
-                        }
+                        "type": "integer",
+                        "description": "Enter team id",
+                        "name": "team_id",
+                        "in": "path",
+                        "required": true
                     },
                     {
                         "type": "string",
